log/build_2026-04-20_14-14-54/hospital_voice/stderr.log
  File "/home/ubuntu/hospital-robot-ROS2/install/hospital_voice/lib/python3.10/site-packages/hospital_voice/tts_node.py", line 34
    with open(tmp_path, 'rb') as f:
    ^^^^
SyntaxError: expected 'except' or 'finally' block

